<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.thunderz99</groupId>
    <artifactId>jar-predownload</artifactId>
    <packaging>jar</packaging>
    <version>0.0.1-SNAPSHOT</version>
    <name>jar-predownload</name>
    <url>http://maven.apache.org</url>


    <properties>
        <java.version>14</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
			<id>central</id>
	        <name>bintray</name>
	        <url>https://jcenter.bintray.com</url>
		</repository>
    </repositories>

    <dependencies>

		<!-- https://mvnrepository.com/artifact/io.javalin/javalin -->
		<dependency>
		    <groupId>io.javalin</groupId>
		    <artifactId>javalin</artifactId>
		    <version>3.9.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>1.7.30</version>
		</dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.10</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.11.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.11.1</version>
        </dependency>

        <dependency>
          <groupId>io.github.thunderz99</groupId>
          <artifactId>java-cosmos</artifactId>
          <version>0.0.8</version>
        </dependency>

        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>java-dotenv</artifactId>
            <version>5.2.1</version>
        </dependency>

		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.14</version>
		</dependency>

		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>29.0-jre</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
		<dependency>
		    <groupId>com.auth0</groupId>
		    <artifactId>java-jwt</artifactId>
		    <version>3.10.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.auth0/jwks-rsa -->
		<dependency>
		    <groupId>com.auth0</groupId>
		    <artifactId>jwks-rsa</artifactId>
		    <version>0.12.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.konghq/unirest-java -->
		<dependency>
		    <groupId>com.konghq</groupId>
		    <artifactId>unirest-java</artifactId>
		    <version>3.9.00</version>
		</dependency>


        <!-- test dependencies -->

        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
		<dependency>
		    <groupId>io.rest-assured</groupId>
		    <artifactId>rest-assured</artifactId>
		    <version>4.3.1</version>
		    <scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.3.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.3.2</version>
            <scope>test</scope>
        </dependency>

		<!-- https://mvnrepository.com/artifact/com.atlassian.oai/swagger-request-validator-restassured -->
		<dependency>
		    <groupId>com.atlassian.oai</groupId>
		    <artifactId>swagger-request-validator-restassured</artifactId>
		    <version>2.10.2</version>
		</dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.16.1</version>
            <scope>test</scope>
        </dependency>

		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <version>3.4.6</version>
		    <scope>test</scope>
		</dependency>



    </dependencies>

    <build>
        <finalName>jar-predownload</finalName>
        <resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
                <includes>
                    <include>**/*.properties</include>
                </includes>
			</resource>
		</resources>
        <plugins>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>14</release>
			        <compilerArgs>
			            <arg>--enable-preview</arg>
			        </compilerArgs>
			        <forceJavacCompilerUse>true</forceJavacCompilerUse>
			        <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
			        <argLine>@{argLine} --enable-preview</argLine>
			    </configuration>
            </plugin>
            <plugin>
		        <groupId>org.jacoco</groupId>
		        <artifactId>jacoco-maven-plugin</artifactId>
		        <version>0.8.5</version>
		        <executions>
		            <execution>
		                <goals>
		                    <goal>prepare-agent</goal>
		                </goals>
		            </execution>
		            <!-- attached to Maven test phase -->
		            <execution>
		                <id>report</id>
		                <phase>test</phase>
		                <goals>
		                    <goal>report</goal>
		                </goals>
		            </execution>
		        </executions>
		    </plugin>

            <plugin>
                <groupId>org.codehaus.gmaven</groupId>
                <artifactId>groovy-maven-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <source>JacocoPrinter.groovy</source>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
